--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,41 @@
+
+.anchor {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  border: red solid 1px;
+}
+
+.section {
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+  margin: 0rem;
+  padding: 1rem;
+}
+
+.subsection {
+  box-sizing: border-box;
+  margin-block: 1rem;
+}
+
+.section-content {
+  flex-grow: 1;
+}
+
+.section-footer {
+
+}
+
+.main-btn {
+  display: block;
+  width: 75vw;
+  margin-inline: auto;
+  margin-block: 1rem;
+  height: 2rem;
+}
+
 canvas {
   border: 1px solid black;
 }
