--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;  
+  overflow-y: hidden;  
+}
+
+html {
+  font-weight: 300;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  scroll-behavior: smooth;
+  font-size: 26px;
+}
+
+/* ensure form elements have same font*/
+input, select, button {
+  font: inherit; 
+}
+
+button {
+  font-size: var(--font-size);
+  border-radius: 5px;
+  background-color: brown;
+}
