--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,26 @@
+
+html {
+  font-size: 26px;
+  font-weight: 300;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;  
   overflow-y: hidden;  
-}
-
-html {
-  font-weight: 300;
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  scroll-behavior: smooth;
-  font-size: 26px;
+  width: 100vw;
+  height: 100vh;
+  border: 1px red dashed;
 }
 
 /* ensure form elements have same font*/
-input, select, button {
+input, select, option, button {
   font: inherit; 
 }
 
-button {
-  font-size: var(--font-size);
-  border-radius: 5px;
-  background-color: brown;
+.top-margin {
+  margin-top: 1rem;
 }
