change from canvas to svg

--- a/src/app/home/methods/methods.component.html
+++ b/src/app/home/methods/methods.component.html
@@ -2,8 +2,8 @@
 
 <form>    
   <label for="inputSearch">Select method(s) to add:</label><br>
-  <input [(ngModel)]="searchString" autocomplete="off"
-    name="inputSearch" id="inputSearch" placeholder="Type to start ...">
+  <input [(ngModel)]="searchString" autocomplete="off"  
+    name="inputSearch" id="inputSearch" placeholder="Type to filter ..." autofocus>
 </form>
 
 <div class="list-container">
