--- a/src/app/home/practice/practice.component.css
+++ b/src/app/home/practice/practice.component.css
@@ -1,10 +1,14 @@
-
-.canvas-container {
+.practice-container {
+  height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  /* border: 1px green solid; */
 }
 
-canvas {
-  border: 1px solid black;
+svg {
+  border: 1px blueviolet solid;
 }
 
 .btns {
