--- a/src/app/home/methods/methods.component.html
+++ b/src/app/home/methods/methods.component.html
@@ -1,4 +1,15 @@
 
+  <div class="content">
+    Welcome to Practice Night, where you can practice your favourite ringing methods
+    and calls until you're ready for that special performance.  Select any combination
+    of methods and calls, and Practice Night will mix things up so you can get those tricky
+    lead end changes firmly planted in your head!
+  </div>
+  <div class="buttons"> 
+    <button class="two-btns-left"  (click)="scrollTo.emit('calls')">Next</button>  
+    <button class="two-btns-right"  (click)="scrollTo.emit('calls')">Next</button>  
+  </div>
+
 
 <form>    
   <label for="inputSearch">Select method(s) to add:</label><br>
