--- a/src/styles.css
+++ b/src/styles.css
@@ -4,15 +4,17 @@ html {
   font-weight: 300;
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   scroll-behavior: smooth;
+  border: 2px purple dotted;
+
 }
 
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;  
-  overflow-y: hidden;  
+  /* overflow-x: hidden;  
+  overflow-y: hidden;   */
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   border: 1px red dashed;
 }
 
