sort of working prototype

--- a/src/app/home/calls/calls.component.html
+++ b/src/app/home/calls/calls.component.html
@@ -1,31 +1,42 @@
-  <form>
+<div class="subcontainer">
+  <div class="generic-flex-grow-container">
+    <form>
     
-    <p>
-      <label for="selectBell">Choose working bell:</label><br>
-      <select #selectWorkingBell [(ngModel)]="selectedWorkingBell" (click)="onBellSelect()" name="selectBell" id="selectBell">
-        @for(wbOption of workingBellSelectionArray; track wbOption) {
-          <option value="{{wbOption}}">{{wbOption}}</option>
-        }
-      </select>
-    </p>
+      <p>
+        <label for="selectBell">Choose working bell:</label><br>
+        <select #selectWorkingBell [(ngModel)]="selectedWorkingBell" (click)="onBellSelect()" name="selectBell" id="selectBell">
+          @for(wbOption of workingBellSelectionArray; track wbOption) {
+            <option value="{{wbOption}}">{{wbOption}}</option>
+          }
+        </select>
+      </p>
 
-    <p>
-      <label for="selectBobs">Bobs:</label>
-      <select #selectBobs [(ngModel)]="bobs" (change)="onBobSelect()" name="selectBobs" id="selectBobs">
-        @for(callOption of callOptions; track callOption) {
-          <option value="{{callOption}}"> {{callOption}} </option>
-        }
-      </select>
+      <p>
+        <label for="selectBobs">Bobs:</label>
+        <select #selectBobs [(ngModel)]="bobs" (change)="onBobSelect()" name="selectBobs" id="selectBobs">
+          @for(callOption of callOptions; track callOption) {
+            <option value="{{callOption}}"> {{callOption}} </option>
+          }
+        </select>
 
-      <label for="selectSingles">Singles:</label>
-      <select #selectSingles [(ngModel)]="singles" (change)="onSingleSelect()" name="selectSingles" id="selectSingles">
-        @for(callOption of callOptions; track callOption) {
-          <option value="{{callOption}}"> {{callOption}} </option>
-        }
-      </select>
+        <label for="selectSingles">Singles:</label>
+        <select #selectSingles [(ngModel)]="singles" (change)="onSingleSelect()" name="selectSingles" id="selectSingles">
+          @for(callOption of callOptions; track callOption) {
+            <option value="{{callOption}}"> {{callOption}} </option>
+          }
+        </select>
 
-      Percentage plain leads: {{calls.plain}}
-      Percentage bob leads: {{calls.bobs}}
-      Percentage single leads: {{calls.singles}}
-    </p>
-  </form>
+        Percentage plain leads: {{calls.plain}}
+        Percentage bob leads: {{calls.bobs}}
+        Percentage single leads: {{calls.singles}}
+      </p>
+    </form>
+
+  </div>
+
+  <div class="nav-btn-container"> 
+    <button class="nav-btns"  (click)="nav.scrollTo('methods')">Back</button>  
+    <button class="nav-btns"  (click)="nav.scrollTo('practice')">Next</button>  
+  </div>
+</div>
+
