--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 /* Overflow needs to be set to auto to enable intersectionObserver to work with horizontal scrolling */
 .root-container {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   overflow-x: auto; 
 }
 
@@ -25,7 +25,7 @@
   display: grid;  
   grid-auto-flow: column;
   grid-auto-columns: 100vw;
-  height: 100vh;
+  height: 100%;
   /* overflow-x: hidden;  
   overflow-y: hidden;   */
 }
