--- a/src/app/home/methods/methods.component.html
+++ b/src/app/home/methods/methods.component.html
@@ -5,25 +5,26 @@
 
     <form class="form">    
       <label for="inputSearch">Select method(s) to add:</label><br>
-      <input [(ngModel)]="searchString" autocomplete="off"  
+      <input [(ngModel)]="searchString" autocomplete="off" (input)="applyFilter()" (focus)="onFocus()" (blur)="onBlur()" 
         name="inputSearch" id="inputSearch" placeholder="Type to filter ..." autofocus>
     </form>
 
     <div class="list-container">
-      <ul class="list popover">
+
+      <ul class="list popover" [hidden]="filteredMethods.length === 0">
         @for (m of filteredMethods; track m) {
           <li (click)="updateSelectedMethods(m,'add')">{{m.name}}</li>
         }
       </ul>
-    </div>
 
-    <div class="top-margin">
+      <br>
       Selected Methods:
       <ul class="list">
         @for (m of selectedMethods; track m) {
           <li (click)="updateSelectedMethods(m,'remove')">{{m.name}}</li>
         }
       </ul>
+
     </div>
 
   </div>
