--- a/src/app/home/methods/methods.component.html
+++ b/src/app/home/methods/methods.component.html
@@ -3,10 +3,10 @@
 <div class="subcontainer">
   <div class="generic-flex-grow-container">
 
-    <form class="form">    
+    <form class="methods-form">    
       <label for="inputSearch">Select method(s) to add:</label><br>
       <input [(ngModel)]="searchString" autocomplete="off" (input)="applyFilter()" (focus)="onFocus()" (blur)="onBlur()" 
-        name="inputSearch" id="inputSearch" placeholder="Type to filter ..." autofocus>
+        name="inputSearch" id="inputSearch" placeholder="Type to filter ...">
     </form>
 
     <div class="list-container">
