--- a/src/styles.css
+++ b/src/styles.css
@@ -4,23 +4,21 @@ html {
   font-weight: 300;
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   scroll-behavior: smooth;
-
 }
 
 body {
   margin: 0;
   padding: 0;
-  /* overflow-x: hidden;  
-  overflow-y: hidden;   */
   width: 100vw;
   height: 100dvh;
 }
 
 /* ensure form elements have same font*/
-input, select, option, button {
-  font: inherit; 
+input, button, select {
+  font: inherit;
 }
 
-.top-margin {
-  margin-top: 1rem;
+option {
+  font-size: 16px;
+
 }
