--- a/src/app/home/practice/practice.component.css
+++ b/src/app/home/practice/practice.component.css
@@ -12,14 +12,46 @@ svg {
   margin-inline: auto;
 }
 
+.svg-container {
+  position: relative;
+
+}
+
 .callbox {
+  position: absolute;
   display: flex;
-  color: blue;
-  font-family: 'Courier New';
-  font-size: 25px;
-  margin-block: 1rem;
+  flex-direction: column;
+  justify-content: flex-end; 
+  width: 100%;
+  height: 250px;
+  /* border: 1px solid blue; */
+  top: 0px;
+  left: 0px;
+}
+
+.callbox-call {
+  position: relative;
+  width: 60%;
   margin-inline: auto;
-  text-align: center;
+  margin-block: 0.2rem;
+  border: 1px solid blue;
+  background-color: #f0f0f0;
+  padding: 0.5rem;
+  border-radius: 5px;
+  /* animation: slideUp 500ms ease forwards 1; */
+  transition: opacity 0.5s ease-out;
+  opacity: 1;
+}
+
+.callbox-call.hidden {
+  opacity: 0;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
 }
 
 .arrow-btns {
