--- a/src/app/home/practice/practice.component.html
+++ b/src/app/home/practice/practice.component.html
@@ -17,9 +17,9 @@
       </div>
 
       <div class="arrow-btns">
-        <button (click)="processKeyEvent('ArrowLeft')">&larr;</button>  
-        <button (click)="processKeyEvent('ArrowDown')">&darr;</button>  
-        <button (click)="processKeyEvent('ArrowRight')">&rarr;</button>  
+        <button (click)="processKeyEvent('ArrowLeft')"> &swarr;</button>  
+        <button (click)="processKeyEvent('ArrowDown')"> &darr;</button>  
+        <button (click)="processKeyEvent('ArrowRight')">&searr;</button>  
       </div>
 
     </div>
