--- a/src/app/home/practice/practice.component.css
+++ b/src/app/home/practice/practice.component.css
@@ -34,13 +34,28 @@ svg {
   width: 60%;
   margin-inline: auto;
   margin-block: 0.2rem;
-  border: 1px solid blue;
-  background-color: #f0f0f0;
+  /* border: 1px solid blue; */
+  background-color: orange;
   padding: 0.5rem;
   border-radius: 5px;
   /* animation: slideUp 500ms ease forwards 1; */
   transition: opacity 0.5s ease-out;
   opacity: 1;
+}
+
+.callbox-call:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 40px solid transparent;
+	border-right-color: orange;
+	border-left: 0;
+	border-bottom: 0;
+	margin-top: -20px;
+	margin-left: -40px;
 }
 
 .callbox-call.hidden {
@@ -56,11 +71,11 @@ svg {
 
 .arrow-btns {
   width: 100%;
-  height: 15%;
+  height: 30%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-block: 2rem;
+  margin-block: 1rem;
 }
 
 .arrow-btns > button {
