--- a/src/app/home/methods/methods.component.html
+++ b/src/app/home/methods/methods.component.html
@@ -30,7 +30,7 @@
 
   <div class="nav-btn-container"> 
     <button class="nav-btns"  (click)="nav.scrollTo('home')">Back</button>  
-    <button class="nav-btns" [disabled]="selectedMethods.length===0" (click)="nav.scrollTo('calls')">Next</button>  
+    <button class="nav-btns" [disabled]="selectedMethods.length===0" (click)="nav.scrollTo('options')">Next</button>  
   </div>
 </div>
 
