--- a/src/app/home/practice/practice.component.html
+++ b/src/app/home/practice/practice.component.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="nav-btn-container"> 
-    <button class="nav-btns"  (click)="nav.scrollTo('calls')">Back</button>  
+    <button class="nav-btns"  (click)="nav.scrollTo('options')">Back</button>  
   </div>
 </div>
 
